--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # If you prefer the allow list template instead of the deny list, see community template:
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
-#
+/bookmarks-keeper
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -28,5 +29,7 @@ go.work.sum
 .env
 
 # Editor/IDE
-# .idea/
+.idea/
 # .vscode/
+
+tags
